kubernetes/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-deployment
  namespace: maybank
  labels:
    app: busybox
spec:
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: busybox
        command: ["sleep", "3600"]
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
        volumeMounts:
        - mountPath: /mnt/efs
          name: efs-volume
        - mountPath: /mnt/configmap
          name: config-volume
      volumes:
      - name: efs-volume
        persistentVolumeClaim:
          claimName: efs-pvc
      - name: config-volume
        configMap:
          name: emptydir-configmap
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - busybox
              topologyKey: "topology.kubernetes.io/zone"
