kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: busybox-service
spec:
  selector:
    app: busybox
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
